syntax = "proto3";

package proto;

option go_package = "proto/";

import "common.proto";

service ProgressProcess {
  rpc Run(ProgressRequest) returns (stream common.ProgressResponse) {}
}

message ProgressRequest {
  string refresh_interval = 1;
}

